test/errors/uninitialized_variable.correct
error: uninitialized_variable.li:1:6: expected '=' but found ';'
│ let x;
│      ~
│      ^
